Fix dashboard pie charts

--- a/app/views/dashboard.jade
+++ b/app/views/dashboard.jade
@@ -4,7 +4,7 @@ section#dashboard
   smart-alarming
   snapshots
   .row
-    article(class="{{(!browser.mobile) && 'col-md-9' || 'col-md-12'}}")
+    article(class="{{(!browser.mobile) && 'col-sm-9' || 'col-sm-12'}}")
       summaries
-    article(class="{{(!browser.mobile) && 'col-md-3' || 'col-md-12'}}", ng-show='StandBy.config.profile.p2000.status')
+    article(class="{{(!browser.mobile) && 'col-sm-3' || 'col-sm-12'}}", ng-show='StandBy.config.profile.p2000.status')
       alarms
