--- a/app/styles/app/_dashboard.scss
+++ b/app/styles/app/_dashboard.scss
@@ -151,7 +151,7 @@
 
         .blocks {
 
-          .col-md-4 {
+          .col-sm-4 {
             &:first-child {
               padding-left: 15px;
             }
@@ -163,6 +163,7 @@
             display: block;
             overflow: hidden;
             margin-bottom: 10px;
+            line-height: 20px;
 
             .icon {
               margin-right: 20px;
@@ -171,7 +172,7 @@
               .scoreboard {
                 display: block;
                 min-width: 75px;
-                height: 48px;
+                height: 75px;
                 text-align: center;
                 -webkit-border-radius: 5px;
                 -moz-border-radius: 5px;
@@ -238,7 +239,7 @@
 
               h3 {
                 display: block;
-                margin: -10px 0 -5px 0;
+                margin: 5px 0 10px 0;
                 padding: 0;
                 font-size: 14px;
               }
@@ -310,7 +311,7 @@
             margin-top: -30px;
             // display: none;
 
-            .col-md-4 {
+            .col-sm-4 {
               padding-right: 40px;
 
               h4 {
@@ -440,7 +441,7 @@
         display: inline;
         float: left;
         padding: 15px;
-        min-width: 230px;
+        min-width: 263px;
         margin-right: 15px;
 
         .sa-member-icon {
