--- a/app/views/groups-wish.jade
+++ b/app/views/groups-wish.jade
@@ -4,5 +4,5 @@ section#groups-wish
       .form-group
         //- TODO: rearrange to remove inline style
         input.form-control(type='text', ng-model='popover.wish', style='width: 55px;')
-        button.btn.btn-primary.btn-sm(type='button', ng-click='saveWish(popover.id, popover.wish); dismiss()') {{ui.groups.widgetSave}}
-        button.btn.btn-default.btn-sm(type='button', ng-click='dismiss()') {{ui.groups.widgetCancel}}
+        button.btn.btn-primary.btn-sm(type='button', ng-click='saveWish(popover.id, popover.wish); $hide()') {{ui.groups.widgetSave}}
+        button.btn.btn-default.btn-sm(type='button', ng-click='$hide()') {{ui.groups.widgetCancel}}
