--- a/app/views/settings.jade
+++ b/app/views/settings.jade
@@ -15,31 +15,7 @@
 		.tab-content
 
 			#userSettingsTab.tab-pane.active
-				.tab-header
-					h3.pull-left {{ui.settings.userSettings}}
-				hr
-				form
-					fieldset
-						.control-group
-							label.control-label {{ui.settings.langSetting}}
-							select(ng-model='settings.user.language',
-							ng-options='option as value for (option, value) in languages')
-						br
-						.form-actions
-							button.btn.btn-success(type='submit',
-							ng-click='save(settings)') {{ui.settings.saveSettings}}
+				settings-user
 
 			#appSettingsTab.tab-pane
-				.tab-header
-					h3.pull-left {{ui.settings.appSettings}}
-				hr
-				form
-					fieldset
-						.control-group
-							label.control-label Eerste groep keuze
-							select(ng-model='settings.app.group',
-							ng-options='option as value for (option, value) in groups')
-						br
-						.form-actions
-							button.btn.btn-success(type='submit', ng-click='save(settings)')
-								| {{ui.settings.saveSettings}}
+				settings-app
