Revert "Split settings tabs into directives"
This reverts commit a0151d848fc9ef6cb56537c65e754b70bb92f456.

--- a/app/views/settings.jade
+++ b/app/views/settings.jade
@@ -15,7 +15,31 @@
 		.tab-content
 
 			#userSettingsTab.tab-pane.active
-				settings-user
+				.tab-header
+					h3.pull-left {{ui.settings.userSettings}}
+				hr
+				form
+					fieldset
+						.control-group
+							label.control-label {{ui.settings.langSetting}}
+							select(ng-model='settings.user.language',
+							ng-options='option as value for (option, value) in languages')
+						br
+						.form-actions
+							button.btn.btn-success(type='submit',
+							ng-click='save(settings)') {{ui.settings.saveSettings}}
 
 			#appSettingsTab.tab-pane
-				settings-app
+				.tab-header
+					h3.pull-left {{ui.settings.appSettings}}
+				hr
+				form
+					fieldset
+						.control-group
+							label.control-label Eerste groep keuze
+							select(ng-model='settings.app.group',
+							ng-options='option as value for (option, value) in groups')
+						br
+						.form-actions
+							button.btn.btn-success(type='submit', ng-click='save(settings)')
+								| {{ui.settings.saveSettings}}
