Revert "Use directive for compose"
This reverts commit a4b6d171db0a30bb087d51edb78d18e30d594bdc.

--- a/app/views/messages/compose.jade
+++ b/app/views/messages/compose.jade
@@ -35,7 +35,7 @@ form(ng-controller='scheaduler')
 
 		.form-group
 			label.control-label {{ui.message.message}}
-			textarea.form-control(rows='7', ng-model='message.body')
+			textarea.form-contro(rows='7', ng-model='message.body')
 
 		.form-group(ng-hide='StandBy.resources.role > 1')
 			label.control-label {{ui.message.repeat}}
