--- a/app/views/messages.jade
+++ b/app/views/messages.jade
@@ -40,7 +40,95 @@ div
 
 			#composeTab.tab-pane(ng-show='views.compose || views.scheaduler',
 			class="{{(views.compose==true || views.scheaduler==true) && 'active'}}")
-				compose
+				.tab-header
+					h3.pull-left
+						span(ng-hide='views.scheaduler') {{ui.message.composeMessage}}
+						span(ng-show='views.scheaduler') {{scheaduled.title | toTitleCase}}
+					button.btn.btn-default.pull-right(type='submit', ng-click='(origin=="inbox"); closeTabs()')
+						| {{ui.message.close}}
+				hr
+				form(ng-controller='scheaduler')
+					fieldset
+						.form-group
+							label.control-label {{ui.message.broadcast}}
+							div
+								input#broadcastSmsCheckBox(type='checkbox',
+								ng-model='broadcast.sms',
+								ng-hide='StandBy.resources.role > 2',
+								style="margin: 0 2px 0 0")
+								label(for='broadcastSmsCheckBox')
+									span(ng-hide='StandBy.resources.role > 2') {{ui.message.sms}}
+								input#broadcastEmailCheckBox(type='checkbox',
+								ng-model='broadcast.email',
+								style='margin: 0 2px 0 10px;')
+								label(for='broadcastEmailCheckBox') {{ui.message.email}}
+
+						.form-group(style='width: 530px;')
+							label.control-label {{ui.message.receviers}}
+							select.chosen-select(data-placeholder=' ',
+							multiple='',
+							chosen='',
+							ng-model='message.receivers',
+							ng-options='receiver.name group by receiver.group for receiver in receviersList | orderBy:"lastName"')
+
+						.form-group
+							label.control-label {{ui.message.subject}}
+							input.form-control(type='text', ng-model='message.subject', placeholder='{{ui.message.typeSubject}}')
+
+						.form-group
+							label.control-label {{ui.message.message}}
+							textarea.form-control(rows='7', ng-model='message.body')
+
+						.form-group(ng-hide='StandBy.resources.role > 1')
+							label.control-label {{ui.message.repeat}}
+							.btn-group(data-toggle='buttons-radio')
+								button.btn.btn-default.btn-sm(type='button',
+								class="{{(scheaduled.status) && 'btn-success.active'}}",
+								ng-model='scheaduled.status',
+								ng-click='scheaduled.status = true; addNewOffset()') {{ui.message.repeatOn}}
+								button.btn.btn-default.btn-sm(type='button',
+								class="{{(!scheaduled.status) && 'active'}}",
+								ng-model='scheaduled.status',
+								ng-click='scheaduled.status = false') {{ui.message.repeatOff}}
+
+						section#scheaduler-pane(ng-show='scheaduled.status')
+							header
+								h4 {{ui.message.repeat}}
+								.pull-right
+									button.btn.btn-sm.btn-success(type='button', ng-click='addNewOffset()')
+										| {{ui.message.repeatNew}}
+							hr
+							.form-group
+								label.control-label {{ui.message.notificationLabel}}
+								input.form-control.col-md-6(type='text', ng-model='scheaduled.title', placeholder='{{ui.message.notificationLabel}}')
+
+							.form-group(ng-hide='scheaduleCount > 0')
+								label.control-label {{ui.message.notifications}}
+								p.text-muted
+									small
+										i {{ui.message.notificationsEmpty}}
+
+							.form-group(ng-show='scheaduleCount > 0')
+								label.control-label {{ui.message.notifications}}
+								span(style='font-size: 11px;', ng-repeat='o in offsets')
+									| {{o}}
+									br
+
+								div(ng-repeat='offset in scheaduled.offsets')
+									notification-item(scheadule='offset', remover='remover()')
+
+						.form-group
+							div(ng-show='scheaduled.uuid || scheaduled.status')
+								button(type='submit', ng-hide='scheaduleCount > 0', class="btn btn-success disabled")
+									| {{ui.message.notificationSave}}
+								button(type='submit',
+								ng-click='scheaduler.save(message, broadcast, scheaduled)',
+								ng-show='scheaduleCount > 0',
+								class="btn btn-success")
+									| {{ui.message.notificationSave}}
+							button.btn.btn-success(type='submit',
+							ng-hide='scheaduled.uuid || scheaduled.status',
+							ng-click='send(message, broadcast)') {{ui.message.sendMessage}}
 
 			#viewTab.tab-pane(ng-show='views.message',
 			class="{{(views.message==true) && 'active'}}")
