feature: falck profile and move logos into directive
from sven4ask

--- a/app/views/login/change-password.jade
+++ b/app/views/login/change-password.jade
@@ -1,7 +1,6 @@
 #changePass.boxed(ng-show='views.changePass')
   form.form-group(ng-submit='changePass()')
-    img(ng-src='{{StandBy.config.profile.logos.login}}',
-    alt='{{StandBy.config.profile.title}}')
+    logos
     h4.form-signin-heading {{changepass.uuid}}
     .alert(class="{{alert.changePass.type}}",
     ng-show='alert.changePass.display')
