--- a/app/views/login/forgot-password.jade
+++ b/app/views/login/forgot-password.jade
@@ -1,7 +1,6 @@
 #forgot.boxed(ng-show='views.forgot')
 	form.form-group(ng-submit='forgot()')
-		img(ng-src='{{StandBy.config.profile.logos.login}}',
-		alt='{{StandBy.config.profile.title}}')
+		logos
 		h4.form-signin-heading
 			| {{ui.login.forgetPassword}}
 		.alert(class="{{alert.forget.type}}",
