--- a/app/views/login/preloaded.jade
+++ b/app/views/login/preloaded.jade
@@ -1,6 +1,5 @@
 #preloader
-  img(ng-src='{{StandBy.config.profile.logos.login}}',
-  alt='{{StandBy.config.profile.title}}')
+  logos
   h4 {{ui.login.setting_up_app}}
   .progress
     .progress-bar-striped.active.progress-bar
