Move profile to main.js

--- a/app/layout.jade
+++ b/app/layout.jade
@@ -20,7 +20,7 @@ html.no-js(lang='en')
 		link(rel='stylesheet', href='styles/responsive.css')
 		link(rel='stylesheet', href='styles/app.css')
 		// endbuild
-		script(src='scripts/profiles/dev/profile.js')
+		//- Change profile in scripts/main.js!
 	body
 		// block watermark
 		block navbar
