Make navbar title dynamic

--- a/app/index.jade
+++ b/app/index.jade
@@ -20,7 +20,7 @@ block navbar
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='#dashboard') StandBy
+          a.navbar-brand(href='#dashboard') {{StandBy.config.profile.title}}
         #collapsed.navbar-collapse.collapse
           ul.nav.navbar-nav
             li(data-match-route='/dashboard')
