--- a/app/views/login/change-password.jade
+++ b/app/views/login/change-password.jade
@@ -14,3 +14,4 @@
     placeholder='{{ui.login.ph_retypePass}}')
     button.btn.btn-lg.btn-primary(type='submit')
       | {{ui.login.changePassword}}
+    img(src='images/standby_logo_small.png', alt='StandBy Logo', ng-hide='StandBy.config.profile.own')
