--- a/app/views/login/forgot-password.jade
+++ b/app/views/login/forgot-password.jade
@@ -15,4 +15,5 @@
 			| {{ui.login.resetPassword}}
 		p
 			small: a(ng-click='views.login=true; views.forgot=false') {{ui.login.returnLogin}}
+		img(src='images/standby_logo_small.png', alt='StandBy Logo', ng-hide='StandBy.config.profile.own')
 		span.version: a(href='version.html', target='_blank') StandBy v{{StandBy.config.version}}
