--- a/app/views/dashboard/alarms.jade
+++ b/app/views/dashboard/alarms.jade
@@ -9,7 +9,7 @@ div.widget
       table
         tr
           td.first
-            span.prio.label.label-important(ng-show='alarm.prio["1"]') PRIO 1
+            span.prio.label.label-danger(ng-show='alarm.prio["1"]') PRIO 1
             span.prio.label.label-warning(ng-show='alarm.prio["2"]') PRIO 2
             span.prio.label.label-info(ng-show='alarm.prio["3"]') PRIO 3
             span.prio.label.label-inverse(ng-show='alarm.prio.test') PROEFALARM
