--- a/app/views/tv.jade
+++ b/app/views/tv.jade
@@ -53,7 +53,7 @@ section#dashboard(style='margin-top: -20px;')
 					table
 						tr
 							td.first
-								span.prio.label.label-important(ng-show='alarm.prio.1') PRIO 1
+								span.prio.label.label-danger(ng-show='alarm.prio.1') PRIO 1
 								span.prio.label.label-warning(ng-show='alarm.prio.2') PRIO 2
 								span.prio.label.label-info(ng-show='alarm.prio.3') PRIO 3
 								span.prio.label.label-inverse(ng-show='alarm.prio.test') PROEFALARM
