Fix watermark not showing

--- a/app/layout.jade
+++ b/app/layout.jade
@@ -22,7 +22,7 @@ html.no-js(lang='en')
 		// endbuild
 		//- Change profile in scripts/main.js!
 	body
-		// block watermark
+		#watermark
 		block navbar
 		block loading
 		block notifications
