Fix some IE stuff

--- a/app/styles/app/_styles.scss
+++ b/app/styles/app/_styles.scss
@@ -335,6 +335,13 @@ dl {
   }
 }
 
+.browserupgrade {
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
+}
+
 // Broad fixes from transition to Bootstrap 3
 .glyphicon {
   top: 2px;
