--- a/app/index.jade
+++ b/app/index.jade
@@ -155,13 +155,16 @@ block icons
   link(rel='shortcut icon', href='icons/favicon.png')
 
 block iestuff
-  //if lt IE 7
-    p.chromeframe
-      | You are using an outdated browser.
-      a(href='http://browsehappy.com/') Upgrade your browser today
-      | or
-      a(href='http://www.google.com/chromeframe/?redirect=true') install Google Chrome Frame
-      | to better experience this site.
-  //if lt IE 9
-    script(src='vendors/es5-shim/es5-shim.js')
-    script(src='vendors/json3/lib/json3.min.js')
+  | <!--[if lt IE 7]>
+  p.browserupgrade
+    | You are using an
+    strong outdated
+    | browser. Please
+    a(href='http://browsehappy.com/') upgrade your browser today
+    | to better experience this site.
+  | <![endif]-->
+  | <!--[if lt IE 9]>
+  script(src='vendors/es5-shim/es5-shim.min.js')
+  script(src='vendors/es5-shim/es5-sham.min.js')
+  script(src='vendors/json3/lib/json3.min.js')
+  | <![endif]-->
