--- a/app/layout.jade
+++ b/app/layout.jade
@@ -1,42 +1,38 @@
 doctype html
-//if lt IE 7
-	html.no-js.lt-ie9.lt-ie8.lt-ie7
-//if IE 7
-	html.no-js.lt-ie9.lt-ie8
-//if IE 8
-	html.no-js.lt-ie9
-// [if gt IE 8] <!
-html.no-js(lang='en')
-	// <![endif]
-	head
-		meta(charset='utf-8')
-		meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-		title StandBy Web
-		meta(name='description', content='')
-		meta(name='viewport', content='width=device-width')
-		block icons
-		// build:css({.tmp,app}) styles/main.css
-		link(rel='stylesheet', href='styles/bootstrap.css')
-		link(rel='stylesheet', href='styles/responsive.css')
-		link(rel='stylesheet', href='styles/app.css')
-		// endbuild
-		//- Change profile in scripts/main.js!
-	body
-		#watermark
-		block navbar
-		block loading
-		block notifications
-		#wrap
-			.container-fluid
-				div(ng-view='')
-			#push
-		block mobile-status-bar
-		block footer
-		script(data-main='scripts/main', src='vendors/requirejs/require.js')
-		script.
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-			ga('create', 'UA-44867560-2');
-			ga('send', 'pageview');
+| <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+| <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+| <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+| <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+head
+	meta(charset='utf-8')
+	meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
+	title StandBy Web
+	meta(name='description', content='')
+	meta(name='viewport', content='width=device-width')
+	block icons
+	// build:css({.tmp,app}) styles/main.css
+	link(rel='stylesheet', href='styles/bootstrap.css')
+	link(rel='stylesheet', href='styles/responsive.css')
+	link(rel='stylesheet', href='styles/app.css')
+	// endbuild
+	//- Change profile in scripts/main.js!
+body
+	block iestuff
+	#watermark
+	block navbar
+	block loading
+	block notifications
+	#wrap
+		.container-fluid
+			div(ng-view='')
+		#push
+	block mobile-status-bar
+	block footer
+	script(data-main='scripts/main', src='vendors/requirejs/require.js')
+	script.
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		ga('create', 'UA-44867560-2');
+		ga('send', 'pageview');
