hide manual button help page

--- a/app/views/help.jade
+++ b/app/views/help.jade
@@ -1,6 +1,6 @@
 .page-header
 	h2 {{ui.help.header}}
-	.btn-group.pull-right
+	#manual.btn-group.pull-right(ng-show="ui.profile.helpManual")
 		a.btn.btn-success(href='http://static.ask-cs.com/standby/Handleiding%20Standby{{(config.profile.meta=="knrm") && " KNRM" || ""}}.pdf', target='_blank')
 			i.glyphicon.glyphicon-book.glyphicon-white
 			| &nbsp;{{ui.downloads.manual}}
